--- a/front/netlify.toml
+++ b/front/netlify.toml
@@ -2,7 +2,7 @@
 # routing internally.
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "public/index.html"
   status = 200
 
 [[headers]]
